feat: change title and add favico

--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./assets/3350552_css_file_web_icon.svg"
+      sizes="32x32" />
+    <title>CSS Selector Trainer</title>
   </head>
 
   <body>
     <header>
       <div class="conteiner header">
-        <h1 class="title">RS-css</h1>
+        <h1 class="title">CSS Selector Trainer </h1>
       </div>
     </header>
 
